--- a/src/app/user-reimbursement/user-reimbursement.component.html
+++ b/src/app/user-reimbursement/user-reimbursement.component.html
@@ -1,9 +1,8 @@
 <main>
   <app-user-reimbursement-menu></app-user-reimbursement-menu>
   <div class="container">
-    <div class="row">
-      <h2>content</h2>
-
+    <div class="row mt-4">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </main>
