[Feature] Improved the ability to add only unique dates for billing, if there is already a date in the table for billing, the amount to be refunded is added. The summation of the amount to be reimbursed has also been improved.

--- a/src/app/user-reimbursement/user-reimbursement-list/user-reimbursement-list.component.html
+++ b/src/app/user-reimbursement/user-reimbursement-list/user-reimbursement-list.component.html
@@ -10,12 +10,10 @@
     [reimbursement]='reimbursementEl' [index]="i"></app-user-reimbursement-item>
 
 </div>
-<div class="col-xs-12" *ngIf="settleds.length">
+<div class="col-xs-12" *ngIf="toReimbursements.length">
   <h2>Lists of add to settled:</h2>
-  <ul class="list-group" *ngFor="let settled of settleds; let id = index">
-    <li class="list-group-item">{{ id + 1 }} : {{ settled.tripDate }} - {{ settled.receiptsType }} - {{
-      settled.receiptsAmount | currency
-      }}</li>
+  <ul class="list-group" *ngFor="let toReimbursement of toReimbursements; let id = index">
+    <li class="list-group-item">{{ id + 1 }} : {{ toReimbursement.date }} - {{ toReimbursement.amount | currency }}</li>
 
   </ul>
 </div>
