--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <h2>Business Trip Reimbursement Calculation</h2>
       </div>
       <div class="col-12 col-md-4">
-        <p>Login as: Michał</p>
+        <p *ngIf="userName">Login as: {{userName}}</p>
       </div>
       <div class="col-12 col-md-4">
         <p class="date">Today is: {{ date }}</p>
