--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <ng-template appPlaceholder></ng-template>
 <div class="row login-center">
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
+  <div class="col-11 col-md-6 col-md-offset-3">
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
     </div>
@@ -15,14 +15,17 @@
         <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
       </div>
       <div>
-        <button type="submit" class="btn btn-primary" [disabled]="!authForm.valid">{{ isLoginMode ? 'Login' : 'Sign
-          Up'}}</button>
-        |
-        <!-- <button class="btn btn-primary" (click)="onSwitchMode()" type="button"> {{ isLoginMode ? ' Switch to Sign Up
+        <div class="row">
+          <div class="col-8 col-md-12">
+            <button type="submit" class="btn btn-primary" [disabled]="!authForm.valid">{{ isLoginMode ? 'Login' : 'Sign
+              Up'}}</button>
+            <!-- <button class="btn btn-primary" (click)="onSwitchMode()" type="button"> {{ isLoginMode ? ' Switch to Sign Up
           mode' :
           'Switch to Login mode'}}</button> -->
-        <button class="btn btn-secondary" (click)="onAsUser()" type="button">Login as USER</button>
-        <button class="btn btn-success" (click)="onAsAdmin()" type="button">Login as ADMIN</button>
+            <button class="btn btn-secondary" (click)="onAsUser()" type="button">Login as USER</button>
+            <button class="btn btn-success" (click)="onAsAdmin()" type="button">Login as ADMIN</button>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-12 col-md-offset-1 mt-3 alert alert-secondary">
