--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,6 +3,9 @@
 	padding-top: 10px;
 	background-color: #f8f9fa;
 }
+.header .row {
+	margin-left: 70px;
+}
 h2 {
 	font-size: 1rem;
 }
@@ -21,10 +24,15 @@ h2,
 @media (min-width: 992px) {
 	.header {
 		padding-top: 10px;
-		background-color: rgb(210, 188, 188);
+		/* background-color: rgb(210, 188, 188); */
+		border-bottom: 0.5px solid black;
+		box-shadow: 5px 0.5px 10px;
 	}
 	h2 {
-		font-size: 1.3rem;
+		font-size: 1.4rem;
+	}
+	p {
+		font-size: 1rem;
 	}
 	p,
 	h2 {
