--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -12,7 +12,8 @@
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
+        <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6"
+          [(ngModel)]="passwordValue">
       </div>
       <div>
         <div class="row">
