--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
       <div class="col-12">
         <h2>Business Trip Reimbursement Calculation</h2>
         <p class="user-name" *ngIf="userName">Login as: <span>{{userName}}</span></p>
+        <p *ngIf="amIAdmin">You are logged in as ADMIN</p>
+        <p *ngIf="!amIAdmin">You are logged in as USER</p>
         <p class="date">Today is: {{ date }}</p>
       </div>
     </div>
