--- a/src/app/user-reimbursement/user-reimbursement-menu/user-reimbursement-menu.component.html
+++ b/src/app/user-reimbursement/user-reimbursement-menu/user-reimbursement-menu.component.html
@@ -7,13 +7,14 @@
     <div class="collapse navbar-collapse" [ngClass]="{'show': !isNavbarCollapsed}" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a routerLinkActive="active" routerLink="/user" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
+          <a (click)="toggleNavbar()" routerLinkActive="active" routerLink="/user"
+            [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
             <fa-icon [icon]="faHouse"></fa-icon>
             <span>My reimbursements</span>
           </a>
         </li>
         <li class="nav-item">
-          <a routerLinkActive="active" routerLink="/user/new" class="nav-link">
+          <a routerLinkActive="active" routerLink="/user/new" class="nav-link" (click)="toggleNavbar()">
             <fa-icon [icon]="faPlus"></fa-icon>
             <span>New reimbursement</span>
           </a>
