[Bug] Display correct info about user login state into header panel  before logging in

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,8 @@
         <h2>Business Trip Reimbursement Calculation</h2>
         <p class="user-name" *ngIf="userName">Login as: <span>{{userName}}</span></p>
         <p *ngIf="amIAdmin">You are logged in as ADMIN</p>
-        <p *ngIf="!amIAdmin">You are logged in as USER</p>
+        <p *ngIf="amIAdmin === undefined ">You are not logged in. Please log in.</p>
+        <p *ngIf="!amIAdmin && amIAdmin !== undefined ">You are logged in as USER</p>
         <p class="date">Today is: {{ date }}</p>
       </div>
     </div>
